// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadRowDefaultView should not render access selector or date picker if access condition is not required to select 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      md={11}
      sm={11}
    >
      <WithStyles(Typography)
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`Component FileUploadRowDefaultView should not render embargo date picker if access condition is set to closed access 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(Typography)
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={4}
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        onChange={[MockFunction]}
        value={8}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(Typography)
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`Component FileUploadRowDefaultView should render default view 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(Typography)
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={4}
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        onChange={[MockFunction]}
        value={null}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(Typography)
        gutterBottom={true}
        variant="body2"
      >
        No date required
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;

exports[`Component FileUploadRowDefaultView should render embargo date picker if access condition is set to open access 1`] = `
<div
  style={
    Object {
      "flexGrow": 1,
      "padding": 4,
    }
  }
>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      md={6}
      sm={5}
    >
      <WithStyles(Typography)
        gutterBottom={true}
        noWrap={true}
        variant="body2"
      >
        test.pdf
         (
        100 MB
        )
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={3}
      sm={4}
    >
      <WithStyles(FileUploadAccessSelector)
        autoFocus={false}
        disabled={false}
        onChange={[MockFunction]}
        value={9}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={2}
      sm={2}
    >
      <WithStyles(FileUploadEmbargoDate)
        disabled={false}
        onChange={[MockFunction]}
        value={2016-12-31T14:00:00.000Z}
      />
    </WithStyles(Grid)>
    <WithStyles(Grid)
      className=""
      item={true}
      xs={1}
    >
      <Connect(FileUploadRowStatus)
        disabled={false}
        name="test.pdf"
        onDelete={[MockFunction]}
      />
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</div>
`;
